fix: fixed broken flexbox alignment in circled articles

--- a/src/assets/styles/components/article/views/_circles.scss
+++ b/src/assets/styles/components/article/views/_circles.scss
@@ -1,6 +1,6 @@
 .view-article__circles {
   display: flex;
-  align-items: flex-start;
+  align-items: center;
   justify-content: center;
   flex-direction: column;
   padding: var(--gutters);
@@ -13,6 +13,7 @@
 
   @include breakpoint-lg {
     flex-wrap: nowrap;
+    align-items: flex-start;
   }
 
   .app-article {
